ready for v2.0 deploy

--- a/portal/templates/masjids/create.html
+++ b/portal/templates/masjids/create.html
@@ -57,7 +57,7 @@
                                     {{ form.juma|attr:"placeholder:01:30 PM"|add_class:"timepicker"|add_class:"timepicker"|as_crispy_field }}
                                 </div>
                             </div>
-                            <button type="submit" class="btn bg-green">ADD ENTRY</button>
+                            <button type="submit" class="btn btn-success waves-effect btn-lg">ADD ENTRY</button>
                         </form>
                     </div>
                 </div>
