--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -3,6 +3,8 @@
 {% block content %}
     <section class="content">
 
+        <marquee class="text-success" scrollamount="5">Version 2.0 | Now you can directly update namaz times. Please update times very carefully!</marquee>
+
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
@@ -88,7 +90,7 @@
                                                     <a href="{{ masjid.get_update_url }}">
                                                         <button type="button" class="btn btn-small btn-success waves-effect">
                                                             <i class="material-icons">edit</i>
-                                                            <span>suggest new times</span>
+                                                            <span>CHANGE TIMES</span>
                                                         </button>
                                                     </a>
                                                 </span>
