PN - masjid staff model created. implementation pending

--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -30,6 +30,8 @@
     {% block custom_links %}
     {% endblock %}
 
+    {% block custom_head %}
+    {% endblock %}
 </head>
 
 <body class="theme-green">
