PN - staff total added, email alert added, google analytics added, django sql error to solve

--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -26,7 +26,15 @@
 
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="{% static "css/themes/all-themes.css" %}" rel="stylesheet" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158076784-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-158076784-1');
+    </script>
     {% block custom_links %}
     {% endblock %}
 
