--- a/portal/templates/masjids/update.html
+++ b/portal/templates/masjids/update.html
@@ -22,6 +22,8 @@
                         <form method="post">
                             {% csrf_token %}
 
+                            {{ form.your_contact|as_crispy_field }}
+
                             <div class="row">
                                 <div class="col-lg-6">
                                     {{ form.name|attr:"placeholder:Enter Masjid Name"|as_crispy_field }}
