--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -21,7 +21,7 @@
 {% block content %}
     <section class="content">
 
-        <marquee class="text-success" scrollamount="5">Version 3.0 | Now you can sort masajid names by Namaz.</marquee>
+        <marquee class="text-success" scrollamount="5">Version 3.0 | Now you can sort masjid names according to namaz times ( earliest or last ).</marquee>
 
         {% if messages %}
             {% for message in messages %}
@@ -77,7 +77,7 @@
             <!-- Basic Example -->
             <div class="row clearfix container-fluid">
 {#            <div style="background-color: #4caf50;padding: 10px">#}
-                <table id="namaz_table" style="width: 100%;background-color: white" class="table display nowrap table-bordered table-striped table-hover js-basic-example dataTable">
+                <table id="namaz_table" style="width: 100%;background-color: white" class="table display nowrap table-bordered table-stridped table-hover">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -148,6 +148,8 @@
 
     <script>
         $(document).ready(function() {
+            let pre_loader = $('.page-loader-wrapper');
+
 
             $('#query').on( 'keyup', function () {
                 table.search( this.value ).draw();
@@ -155,6 +157,7 @@
             } );
 
             function sort_table(){
+                pre_loader.show();
                 let sort_col = parseInt($("#sort_by_namaz").val());
                 let sort_order = $("#sort_order").val();
                 table = $("#namaz_table").DataTable({
@@ -174,6 +177,7 @@
                     ]
                 });
                 $("#namaz_table_filter").hide();
+                pre_loader.hide();
             }
             $("#sort_by_namaz, #sort_order").on("change", function () {
                 if ($("#sort_by_namaz").val() !== "") {
